--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -34,4 +34,5 @@
     <string name="today">Today</string>
     <string name="next_days">Next 5 days</string>
     <string name="search">Search</string>
+    <string name="my_cities">My Cities</string>
 </resources>
